--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "6.1.8",
+    "add": "2.0.6",
+    "axios": "1.5.0",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-maps": "1.7.1",
+    "react-native-safe-area-context": "4.7.2",
+    "react-native-screens": "3.25.0",
+    "react-query": "3.39.3",
+    "yarn": "1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
